--- a/src/main/resources/templates/admin_dashboard.html
+++ b/src/main/resources/templates/admin_dashboard.html
@@ -8,16 +8,9 @@
 <h2>Bienvenue, <span th:text="${username}"></span>!</h2>
 <span th:text="${message}"></span>
 <div class="container">
-    <div th:if="${#authorization.expression('isAuthenticated()')}">
-        <div class="mb-3">
-            Vous êtes connecté
-            <span th:text="${#authentication.principal.username}"></span>,
-            <a th:href="@{/logout}">Déconnexion</a>
-        </div>
-    </div>
     <div sec:authorize="isAuthenticated()">
         <form id="logoutForm" method="POST" th:action="@{/logout}">
-<!--            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>-->
+            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
         </form>
 
         <h2>Welcome <span sec:authentication="name"></span> | <a
