deconnexion sur navbar

--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -58,7 +58,7 @@
                     <span class="has-error" th:text="${error}"></span>
                 </div>
 
-                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+<!--                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>-->
                 <div>
                     <a th:href="@{/forgot_password_request}" class="form__link">Mot de passe oublié ?</a>
                 </div>
