--- a/src/main/resources/templates/ajoutMotConfirmation.html
+++ b/src/main/resources/templates/ajoutMotConfirmation.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:replace="~{components/navBar}"></div>
-
+<link href="/css/admin.css" rel="stylesheet">
     <p class="fs-4 fw-light mt-5 text-center" >Le mot
         <span class="fw-bolder fs-2 ms-2 me-2" th:text="${motAjoute}"></span>
         a bien été ajouté !
