--- a/src/main/resources/templates/ajouterUnMot.html
+++ b/src/main/resources/templates/ajouterUnMot.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:replace="~{components/navBar}"></div>
-
+<link href="/css/admin.css" rel="stylesheet">
 <h1 class="text-center mb-5 mt-4">Ajouter un mot</h1>
 
 <form class="d-flex"
