--- a/src/main/resources/templates/compte.html
+++ b/src/main/resources/templates/compte.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <div th:replace="~{components/navBar}"></div>
+    <link href="/css/admin.css" rel="stylesheet">
     <h1 th:text="${message}"></h1>
 </body>
 <div th:replace="~{components/footer :: footer}"></div>
