--- a/src/main/resources/templates/consulterLesDossiers.html
+++ b/src/main/resources/templates/consulterLesDossiers.html
@@ -6,7 +6,7 @@
 
 <body>
 <div th:replace="~{components/navBar}"></div>
-
+<link href="/css/admin.css" rel="stylesheet">
 
 <div class="container">
 <br>
