--- a/src/main/resources/templates/consulterLesMots.html
+++ b/src/main/resources/templates/consulterLesMots.html
@@ -7,7 +7,7 @@
 
 <body>
 <div th:replace="~{components/navBar}"></div>
-
+<link href="/css/admin.css" rel="stylesheet">
 
 <div th:replace="~{components/modales :: modaleInfosMots}"></div>
 
