--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -12,8 +12,6 @@
             crossorigin="anonymous">
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
-
 </head>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark">
@@ -54,8 +52,7 @@
                                    data-bs-toggle="dropdown"
                                    href="#">Mots</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/gestionDesMots/consulterLesMots">Consulter les
-                                        mots</a></li>
+                                    <li><a class="dropdown-item" href="/gestionDesMots/consulterLesMots">Consulter les mots</a></li>
                                     <li><a class="dropdown-item" href="/gestionDesMots/ajouterUnMot">Ajouter un mot</a>
                                     </li>
                                 </ul>
@@ -68,10 +65,8 @@
                                    data-bs-toggle="dropdown"
                                    href="#">Catégories</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/gestionDesCategories/consulterLesCategories">Consulter
-                                        les catégories</a></li>
-                                    <li><a class="dropdown-item" href="/gestionDesCategories/ajouterUneCategorie">Ajouter
-                                        une catégorie</a></li>
+                                    <li><a class="dropdown-item" href="/gestionDesCategories/consulterLesCategories">Consulter les catégories</a></li>
+                                    <li><a class="dropdown-item" href="/gestionDesCategories/ajouterUneCategorie">Ajouter une catégorie</a></li>
                                 </ul>
                             </li>
                             <!-- Gérer les catégories -->
@@ -94,34 +89,36 @@
                     </li>
 
 
-                    <li class="nav-item dropdown"><a
+                    <li sec:authorize="hasRole('PRO')" class="nav-item dropdown"><a
                             class="nav-link dropdown-toggle"
                             th:classappend="${module == 'gestionDesDossiers' ? 'active' : ''}"
                             data-bs-toggle="dropdown" href="#" role="button"
-                            aria-expanded="false">Dossiers
-                        médicaux</a>
+                            aria-expanded="false">Dossiers médicaux</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/consulterLesDossiers">Consulter
-                                les dossiers</a></li>
-                            <li><a class="dropdown-item" href="/ajouterUnDossier">Ajouter
-                                un dossier</a></li>
+                            <li><a class="dropdown-item" href="/consulterLesDossiers">Consulter les dossiers</a></li>
+                            <li><a class="dropdown-item" href="/ajouterUnDossier">Ajouter un dossier</a></li>
                         </ul>
                     </li>
+
+                    <li sec:authorize="hasRole('ADMIN')" class="nav-item"><a class="nav-link"
+                                                                             th:classappend="${module == 'gestionDesDossiers' ? 'active' : ''}"
+                                                                             th:href="@{/consulterLesDossiers}">Liste des dossiers médicaux</a></li>
+
+                    <li sec:authorize="hasRole('ADMIN')" class="nav-item"><a class="nav-link"
+                                                                             th:classappend="${module == 'consulterLesPros' ? 'active' : ''}"
+                                                                             th:href="@{/consulterLesPros}">Liste des professionnels de santé</a></li>
 
                     <li class="nav-item"><a class="nav-link"
                                             th:classappend="${module == 'echange' ? 'active' : ''}"
                                             th:href="@{/echange}">Echange</a></li>
 
+                    <li sec:authorize="hasRole('PRO')" class="nav-item"><a class="nav-link"
+                                            th:classappend="${module == 'session' ? 'active' : ''}"
+                                            th:href="@{/session}">Session de travail</a></li>
+
                     <li class="nav-item"><a class="nav-link"
                                             th:classappend="${module == 'compte' ? 'active' : ''}"
                                             th:href="@{/compte}">Mon compte</a></li>
-
-                    <li sec:authorize="hasRole('ADMIN')" class="nav-item"><a class="nav-link"
-                                                                             th:classappend="${module == 'consulterLesPros' ? 'active' : ''}"
-                                                                             th:href="@{/consulterLesPros}">Liste des professionnels de santé</a></li>
-                    <li class="nav-item"><a class="nav-link"
-                                            th:classappend="${module == 'session' ? 'active' : ''}"
-                                            th:href="@{/session}">Session de travail</a></li>
 
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <form id="logoutForm" method="POST" th:action="@{/logout}">
