maj formulaire compte

--- a/src/main/resources/templates/ajouterUnMot.html
+++ b/src/main/resources/templates/ajouterUnMot.html
@@ -7,7 +7,7 @@
 <body>
 <div th:replace="~{components/navBar}"></div>
 <link href="/css/admin.css" rel="stylesheet">
-<h1 class="text-center mb-5 mt-4">Ajouter un mot</h1>
+<h1 class="text-center pt-5 pb-5">Ajouter un mot</h1>
 
 <form class="d-flex"
       th:action="@{/gestionDesMots/ajouterUnMot}"
