--- a/src/main/resources/templates/compte.html
+++ b/src/main/resources/templates/compte.html
@@ -4,9 +4,117 @@
     <title>Mon compte</title>
 </head>
 <body>
-    <div th:replace="~{components/navBar}"></div>
-    <link href="/css/admin.css" rel="stylesheet">
-    <h1 th:text="${message}"></h1>
+<div th:replace="~{components/navBar}"></div>
+<link href="/css/admin.css" rel="stylesheet">
+<h2 class="text-center pt-5 pb-5">Informations personnelles</h2>
+<main class="d-flex w-100">
+    <div class="container d-flex flex-column">
+        <div class="row">
+            <div class="col-sm-10 col-md-10 col-lg-12 col-xl-12 mx-auto d-table h-100">
+                <div class="d-table-cell align-middle">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="m-sm-3">
+                                <form>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <div class="mb-3">
+                                                <label class="form-label">Pseudonyme</label>
+                                                <input class="form-control form-control-lg" type="text" name="username"
+                                                       placeholder="Entrer votre pseudonyme"/>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="mb-3">
+                                                <label class="form-label">Nom</label>
+                                                <input class="form-control form-control-lg" type="text" name="nom"
+                                                       placeholder="Entrer votre nom"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <div class="mb-3">
+                                                <label class="form-label">Mot de passe</label>
+                                                <input class="form-control form-control-lg" type="password"
+                                                       name="password" placeholder="Entrer votre mot de passe"/>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="mb-3">
+                                                <label class="form-label">Prénom</label>
+                                                <input class="form-control form-control-lg" type="text" name="prenom"
+                                                       placeholder="Entrer votre prénom"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <div class="mb-3">
+                                                <label class="form-label">Conrfirmer le mot de passe</label>
+                                                <input class="form-control form-control-lg" type="password"
+                                                       name="confirmPassword"
+                                                       placeholder="Confirmer votre mot de passe"/>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="mb-3">
+                                                <label class="form-label">Date de naissance</label>
+                                                <input class="form-control form-control-lg" type="date"
+                                                       name="dateNaissance"
+                                                       placeholder="Entrer votre date de naissance"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <div class="mb-3">
+                                                <label class="form-label">Email</label>
+                                                <input class="form-control form-control-lg" type="email" name="email"
+                                                       placeholder="Entrer votre adresse email"/>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="mb-3">
+                                                <label class="form-label">Service/Département</label>
+                                                <input class="form-control form-control-lg" type="text" name="service"
+                                                       placeholder="Entrer votre Service/Département"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6 col-lg-6 col-xl-6">
+                                            <div class="mb-3">
+                                                <label class="form-label">Téléphone</label>
+                                                <input class="form-control form-control-lg" type="text" name="telephone"
+                                                       placeholder="Entrer votre numéro de téléphone"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row justify-content-center">
+                                        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-5">
+                                            <div class="d-grid gap-2 mt-3">
+                                                <a href="index.html" class="btn btn-lg btn-success">Mettre à jour les informations</a>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-4">
+                                            <div class="d-grid gap-2 mt-3">
+                                                <a href="index.html" class="btn btn-lg btn-danger">Supprimer le compte</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+
+<script src="/js/admin.js"></script>
 </body>
 <div th:replace="~{components/footer :: footer}"></div>
 </html>
