--- a/src/main/resources/templates/consulterLesDossiers.html
+++ b/src/main/resources/templates/consulterLesDossiers.html
@@ -10,7 +10,7 @@
 
 <div class="container">
 <br>
-    <h1 class="text-center">Liste des dossiers médicaux des patients</h1>
+    <h1 class="text-center pt-5 pb-5">Liste des dossiers médicaux des patients</h1>
     <br>
     <br>
     <table class="table">
