--- a/src/main/resources/templates/detailsPro.html
+++ b/src/main/resources/templates/detailsPro.html
@@ -7,7 +7,7 @@
 <body>
 <div th:replace="~{components/navBar}"></div>
 <link href="/css/admin.css" rel="stylesheet">
-<div class="container">
+<div class="container mt-5">
     <div class="card">
         <div class="card-body">
             <h3 class="card-title">Informations de contact du professionnel de santé</h3>
