--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -12,30 +12,30 @@
             <div class="switch__container">
                 <h2 class="form_title title2">Coordonnées personnelles</h2>
                 <div>
-                    <input class="form__input" type="text" name="nom" placeholder="Nom*" required><br>
+                    <input class="form__input" type="text" th:field="*{nom}" name="nom" placeholder="Nom*" required><br>
                     <span th:class="has-error" th:if="${#fields.hasErrors('nom')}" th:errors="*{nom}"></span>
                 </div>
                 <div>
-                    <input class="form__input" type="text" name="prenom" placeholder="Prénom*" required autofocus><br>
+                    <input class="form__input" type="text" th:field="*{prenom}" name="prenom" placeholder="Prénom*" required autofocus><br>
                     <span th:class="has-error" th:if="${#fields.hasErrors('prenom')}" th:errors="*{prenom}"></span>
                 </div>
                 <div>
-                    <input class="form__input" type="text" onfocus="(this.type='date')" name="dateNaissance"
+                    <input class="form__input" type="text" th:field="*{dateNaissance}" onfocus="(this.type='date')" name="dateNaissance"
                            placeholder="Date de naissance*" required><br>
                     <span th:class="has-error" th:if="${#fields.hasErrors('dateNaissance')}"
                           th:errors="*{dateNaissance}"></span>
                 </div>
                 <div>
-                    <input class="form__input" type="text" name="service" placeholder="Service/Département médical*"
+                    <input class="form__input" type="text" th:field="*{service}" name="service" placeholder="Service/Département médical*"
                            required><br>
                     <span th:class="has-error" th:if="${#fields.hasErrors('service')}" th:errors="*{service}"></span>
                 </div>
                 <div>
-                    <input class="form__input" type="email" name="email" placeholder="Email*" required><br>
+                    <input class="form__input" type="email" th:field="*{email}" name="email" placeholder="Email*" required><br>
                     <span th:class="has-error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
                 </div>
                 <div>
-                    <input class="form__input" type="text" name="telephone" placeholder="Numéro de téléphone*"
+                    <input class="form__input" type="text" th:field="*{telephone}" name="telephone" placeholder="Numéro de téléphone*"
                            required><br>
                     <span th:class="has-error" th:if="${#fields.hasErrors('telephone')}"
                           th:errors="*{telephone}"></span>
@@ -50,17 +50,17 @@
                 <img th:src="@{/images/Logos/Logo PNG.png}" alt="" width="50px">
                 <h2 class="form_title title">Identifiants</h2>
                 <div class="pss">
-                    <input class="form__input" type="text" name="username" placeholder="Pseudonyme*" required autofocus><br>
+                    <input class="form__input" type="text" th:field="*{username}" name="username" placeholder="Pseudonyme*" required autofocus><br>
                     <span th:class="has-error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
                 </div>
 
                 <div>
-                    <input class="form__input" type="password" th:field="*{password}"
+                    <input class="form__input" type="password" th:field="*{password}" name="password"
                            placeholder="Mot de Passe*" required><br>
                     <span th:class="has-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
                 </div>
                 <div>
-                    <input class="form__input" type="password" name="confirmPassword"
+                    <input class="form__input" type="password" th:field="*{confirmPassword}" name="confirmPassword"
                            placeholder="Confirmer le Mot de Passe*" required><br>
                     <span th:class="has-error" th:if="${#fields.hasErrors('confirmPassword')}"
                           th:errors="*{confirmPassword}"></span>
