maj delete compte

--- a/src/main/resources/templates/compte.html
+++ b/src/main/resources/templates/compte.html
@@ -131,7 +131,7 @@
                                         </div>
                                         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-4">
                                             <div class="d-grid gap-2 mt-3">
-                                                <a th:href="@{/compte/delete}" class="btn btn-lg btn-danger">Supprimer le compte</a>
+                                                <a th:href="@{/deleteCompte}" class="btn btn-lg btn-danger">Supprimer le compte</a>
                                             </div>
                                         </div>
                                     </div>
