--- a/src/main/resources/templates/suppressionCompteEchec.html
+++ b/src/main/resources/templates/suppressionCompteEchec.html
@@ -11,7 +11,7 @@
             <h1 class="switch__title title-2">Echec de la suppression !</h1>
             <p class="switch__description description">Une erreur est survenue lors de la suppression du compte.</p><br>
             <p class="switch__description description">Veuillez recommencer l'opération.</p><br>
-            <a th:href="@{/compte/profile}" class="switch__button button-i switch-btn a-button" type="button">
+            <a th:href="@{/compte}" class="switch__button button-i switch-btn a-button" type="button">
                 <p>Retourner sur mon compte</p>
             </a>
         </form>
