update compte ok

--- a/src/main/resources/templates/modificationCompteSucces.html
+++ b/src/main/resources/templates/modificationCompteSucces.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Succès de la suppression du compte</title>
+    <title>Succès de la modification du compte</title>
     <link rel="stylesheet" href="/css/succesEchec.css"/>
 </head>
 <body>
 <div class="main">
     <div class="container a-container" id="a-container">
         <form class="form" id="a-form">
-            <h1 class="switch__title title-1">Suppression du compte validée !</h1>
+            <h1 class="switch__title title-1">Modification du compte validée !</h1>
             <h2 class="switch__title title">Bienvenue sur
                 <span class="PBlue">P</span>icto<span class="PRouge">P</span>icto!</h2>
             <p class="switch__description description">Destinée à développer la communication à l'aide de pictogrammes,
@@ -17,7 +17,7 @@
                 patient
                 ainsi que l'intégration de nouveaux pictogrammes choisis par vos soins.</p><br>
             <a th:href="@{/logout}" class="switch__button button-i switch-btn a-button" type="button">
-                <p>Se rendre sur la page d'accueil</p>
+                <p>Retour à la page de connexion</p>
             </a>
         </form>
         <div class="droit padding-b">
