--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -12,6 +12,7 @@
             crossorigin="anonymous">
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="icon" type="favicon" th:href="@{/images/Logos/Logo.png}"/>
 </head>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark">
@@ -52,7 +53,8 @@
                                    data-bs-toggle="dropdown"
                                    href="#">Mots</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/gestionDesMots/consulterLesMots">Consulter les mots</a></li>
+                                    <li><a class="dropdown-item" href="/gestionDesMots/consulterLesMots">Consulter les
+                                        mots</a></li>
                                     <li><a class="dropdown-item" href="/gestionDesMots/ajouterUnMot">Ajouter un mot</a>
                                     </li>
                                 </ul>
@@ -65,8 +67,10 @@
                                    data-bs-toggle="dropdown"
                                    href="#">Catégories</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/gestionDesCategories/consulterLesCategories">Consulter les catégories</a></li>
-                                    <li><a class="dropdown-item" href="/gestionDesCategories/ajouterUneCategorie">Ajouter une catégorie</a></li>
+                                    <li><a class="dropdown-item" href="/gestionDesCategories/consulterLesCategories">Consulter
+                                        les catégories</a></li>
+                                    <li><a class="dropdown-item" href="/gestionDesCategories/ajouterUneCategorie">Ajouter
+                                        une catégorie</a></li>
                                 </ul>
                             </li>
                             <!-- Gérer les catégories -->
@@ -102,19 +106,22 @@
 
                     <li sec:authorize="hasRole('ADMIN')" class="nav-item"><a class="nav-link"
                                                                              th:classappend="${module == 'gestionDesDossiers' ? 'active' : ''}"
-                                                                             th:href="@{/consulterLesDossiers}">Liste des dossiers médicaux</a></li>
+                                                                             th:href="@{/consulterLesDossiers}">Liste
+                        des dossiers médicaux</a></li>
 
                     <li sec:authorize="hasRole('ADMIN')" class="nav-item"><a class="nav-link"
                                                                              th:classappend="${module == 'consulterLesPros' ? 'active' : ''}"
-                                                                             th:href="@{/consulterLesPros}">Liste des professionnels de santé</a></li>
+                                                                             th:href="@{/consulterLesPros}">Liste des
+                        professionnels de santé</a></li>
 
                     <li class="nav-item"><a class="nav-link"
                                             th:classappend="${module == 'echange' ? 'active' : ''}"
                                             th:href="@{/echange}">Echange</a></li>
 
                     <li sec:authorize="hasRole('PRO')" class="nav-item"><a class="nav-link"
-                                            th:classappend="${module == 'session' ? 'active' : ''}"
-                                            th:href="@{/session}">Session de travail</a></li>
+                                                                           th:classappend="${module == 'session' ? 'active' : ''}"
+                                                                           th:href="@{/session}">Session de travail</a>
+                    </li>
 
                     <li class="nav-item"><a class="nav-link"
                                             th:classappend="${module == 'compte' ? 'active' : ''}"
